--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/mobile_navigation"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+
+    android:id="@+id/mobile_navigation"
     app:startDestination="@id/exRatesFragment">
 
     <fragment
         android:id="@+id/archiveFragment"
         android:name="com.example.exchanger.UI.ArchiveFragment"
-        android:label="ArchiveFragment" />
+        android:label="ArchiveFragment"/>
     <fragment
         android:id="@+id/converterFragment"
         android:name="com.example.exchanger.UI.ConverterFragment"
@@ -14,5 +17,6 @@
     <fragment
         android:id="@+id/exRatesFragment"
         android:name="com.example.exchanger.UI.ExRatesFragment"
-        android:label="ExRatesFragment" />
+        android:label="ExRatesFragment"
+        tools:layout="@layout/fragment_ex_rates"/>
 </navigation>
