ExRatesItem added Recycler view created ExRatesFragment created

--- a/app/src/main/res/layout/ex_rates_item.xml
+++ b/app/src/main/res/layout/ex_rates_item.xml
@@ -84,7 +84,7 @@
             tools:text="27" />
 
         <ImageView
-            android:id="@+id/textView_temperature"
+            android:id="@+id/imageView_flag"
             android:layout_width="87dp"
             android:layout_height="58dp"
             android:layout_marginStart="8dp"
