--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -5,18 +5,21 @@
 
     android:id="@+id/mobile_navigation"
     app:startDestination="@id/exRatesFragment">
-
-    <fragment
-        android:id="@+id/archiveFragment"
-        android:name="com.example.exchanger.UI.ArchiveFragment"
-        android:label="ArchiveFragment"/>
-    <fragment
-        android:id="@+id/converterFragment"
-        android:name="com.example.exchanger.UI.ConverterFragment"
-        android:label="ConverterFragment" />
     <fragment
         android:id="@+id/exRatesFragment"
         android:name="com.example.exchanger.UI.ExRatesFragment"
-        android:label="ExRatesFragment"
+        android:label="Current Exchange Rates"
         tools:layout="@layout/fragment_ex_rates"/>
+    <fragment
+        android:id="@+id/converterFragment"
+        android:name="com.example.exchanger.UI.ConverterFragment"
+        android:label="Exchange Rates Converter"
+        tools:layout="@layout/fragment_converter"/>
+    <fragment
+        android:id="@+id/archiveFragment"
+        android:name="com.example.exchanger.UI.ArchiveFragment"
+        android:label="Exchange Rates Archive"
+        tools:layout="@layout/fragment_archive"/>
+
+
 </navigation>
