--- a/app/src/main/res/layout/fragment_ex_rates.xml
+++ b/app/src/main/res/layout/fragment_ex_rates.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".UI.MainActivity">
+    tools:context=".ui.MainActivity">
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/group_loading"
