--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
 
     android:id="@+id/mobile_navigation"
-    app:startDestination="@id/exRatesFragment">
+    app:startDestination="@id/converterFragment">
     <fragment
         android:id="@+id/exRatesFragment"
         android:name="com.example.exchanger.ui.ExRatesFragment"
