--- a/app/src/main/res/menu/currency_choice.xml
+++ b/app/src/main/res/menu/currency_choice.xml
@@ -12,4 +12,7 @@
     <item android:id="@+id/btc"
         android:icon="@drawable/btc"
         android:title="@string/label_btc" />
+    <item android:id="@+id/uah"
+        android:icon="@drawable/uah"
+        android:title="@string/label_uah" />
 </menu>
